--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -1,6 +1,7 @@
 cabal-version:      2.2
 name:               quickcheck-instances
 version:            0.3.32
+x-revision:         1
 synopsis:           Common quickcheck instances
 description:
   QuickCheck instances.
@@ -33,9 +34,10 @@ tested-with:
    || ==9.0.2
    || ==9.2.8
    || ==9.4.8
-   || ==9.6.5
-   || ==9.8.2
+   || ==9.6.6
+   || ==9.8.4
    || ==9.10.1
+   || ==9.12.1
 
 source-repository head
   type:     git
@@ -79,7 +81,7 @@ library
   other-modules:      Test.QuickCheck.Instances.CustomPrelude
   hs-source-dirs:     src
   build-depends:
-    , base        >=4.12.0.0 && <4.21
+    , base        >=4.12.0.0 && <4.22
     , QuickCheck  >=2.14.2   && <2.15.1
     , splitmix    >=0.1.0.5  && <0.2
 
